# price-physics

./: .gitattributes  .gitignore  README.md  pyproject.toml  python.cmd  requirements.txt  temp_view.txt  temp_view2.txt
.backup/: _ml_prev.py
configs/: bars.yaml  imaging.yaml  tbm.yaml  train.yaml  wf.yaml
outputs/analysis/: label_stats.json  label_stats_by_file.csv
scripts/: .bak_make_labels_before_endts.py  compute_uniqueness.py  cv_weights_demo.py  demo_generate_ticks.py  fix_month_and_drop_july.py  inspect_table.py  interpret.py  join_prev_labels.py  klines_to_ticks.py  label_from_ticks.py  label_or_relabel.py  label_stats.py  make_bars.py  make_fold_weights.py  make_folds.py  make_images.py  make_labels.py  make_regime_features.py  make_snapshot.py  make_splits.py  make_weights.py  materialize_folds.py  pick_thresholds_by_ev.py  quantile_tp_sl.py  quantile_tp_sl_grouped.py  sampler_helper.py  set_tbm_sym.py  smoke_schema_audit.py  temp_scale.py  threshold_sweep.py  train.py  train_classifier_cv.py  train_sanity.py  wf_eval.py
scripts/ps/: quick_start.ps1
src/bars/: dollar_bars.py
src/datasets/: shard_dataset.py
src/imaging/: calendar.py  exact.py
src/interp/: grad_cam.py  motif_cluster.py
src/labeling/: triple_barrier.py  weights.py
src/models/: purged_cv.py  resnet_lite.py  timm_wrapper.py
src/price_physics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sim/: pnl_sim.py
src/utils/: data.py  progress.py  seeds.py
tests/: test_months_subset.py
